# SkillNexus

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_server.py  test_e2e.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/pages/: AnalysisList.tsx  Dashboard.tsx  EvolutionPage.tsx  SkillDetail.tsx  SkillList.tsx
skillnexus/: __init__.py
skillnexus/api/: __init__.py  app.py  dependencies.py
skillnexus/api/routes/: analysis.py  evolution.py  skills.py
skillnexus/config/: constants.py  settings.json  settings.py
skillnexus/core/: __init__.py  analyzer.py  conversation_formatter.py  evolver.py  fuzzy_match.py  patch.py  registry.py  retrieve_skill.py  skill_ranker.py  skill_utils.py  store.py  types.py
skillnexus/llm/: client.py
skillnexus/prompts/: __init__.py  skill_engine_prompts.py
skillnexus/recording/: __init__.py  action_recorder.py  manager.py  recorder.py  utils.py
skillnexus/utils/: logging.py
skills/csv-report-broken/: .skill_id  SKILL.md
skills/csv-report-broken-enhanced/: .skill_id  SKILL.md
skills/json-to-monthly-csv-report/: .skill_id  SKILL.md
